--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
 		"react": "18.2.0",
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "18.2.0",
+		"react-spinners": "^0.13.8",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.27",
-		"tailwindcss": "^3.3.3"
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.3"
 	}
 }
