--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "18.2.0",
 		"react-spinners": "^0.13.8",
+		"react-typed": "^2.0.12",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
